# algomart

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .npmrc  .pino-prettyrc  .prettierignore  .prettierrc.json  .tool-versions  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  babel.config.js  docker-compose.deploy.yml  docker-compose.test.yml  docker-compose.yml  jest.preset.js  jest.resolver.js  nx.json  package-lock.json  package.json  pull_request_template.md  tsconfig.base.json  workspace.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  epic.md  story.md
.github/workflows/: continuous-deployment-production.yml  continuous-deployment.yml  continuous-integration.yml  deploy.yml  pull-request-checks.yml
.husky/: pre-commit
apps/api/: .env.example  README.md  jest.config.js  package.json  project.json  tsconfig.app.json  tsconfig.json  (+1 more)
contracts/: .gitignore  README.md  build.sh  pyproject.toml  test.sh
contracts/src/contracts/: auction.py  utils.py
contracts/src/contracts/enforcer/: abi.json  approval.py  clear.py
contracts/tests/: test_auction.py  test_contracts.py  test_enforcer.py  test_utils.py
kubernetes/: .terraform.lock.hcl  cloud_sql.tf  data.tf  kubernetes.tf  main.tf  provider.tf  terraform.tfstate  variables.tf  vpc.tf
terraform/: CHANGELOG.md  README.md  cloud_run_api.tf  cloud_run_cms.tf  cloud_run_scribe.tf  cloud_run_web.tf  cloud_sql.tf  main.tf  nat_gateway.tf  sample.terraform.tfvars  variables.tf
(+1782 files in other folders)
