[tool.poetry]
authors = ["Simon Ingeson <44818+smonn@users.noreply.github.com>"]
description = ""
name = "contracts"
version = "0.1.0"

[tool.poetry.dependencies]
py-algorand-sdk = "^1.9.0"
pyteal = "^0.9.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
