[tool.poetry]
authors = ["Dept Agency"]
description = ""
name = "contracts"
version = "0.1.0"

[tool.poetry.dependencies]
py-algorand-sdk = "^1.10.0"
pyteal = "^0.10.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"
pytest-xdist = "^2.5.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
