[tool.poetry]
authors = ["Dept Agency"]
description = ""
name = "contracts"
version = "0.1.0"

[tool.poetry.dependencies]
py-algorand-sdk = "^1.10.0"
pyteal = { git = "https://github.com/algorand/pyteal.git", branch = "feature/abi" }
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"
pytest-xdist = "^2.5.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
